@@ -17,13 +17,14 @@ VkFormat GetVulkanFormat(UHTextureFormat InUHFormat)
 		FormatCache[UH_FORMAT_D32F] = VK_FORMAT_D32_SFLOAT;
 		FormatCache[UH_FORMAT_D32F_S8] = VK_FORMAT_D32_SFLOAT_S8_UINT;
 		FormatCache[UH_FORMAT_X8_D24] = VK_FORMAT_X8_D24_UNORM_PACK32;
-		FormatCache[UH_FORMAT_ABGR2101010] = VK_FORMAT_A2B10G10R10_UNORM_PACK32;
-		FormatCache[UH_FORMAT_ARGB2101010] = VK_FORMAT_A2R10G10B10_UNORM_PACK32;
+		FormatCache[UH_FORMAT_A2B10G10R10] = VK_FORMAT_A2B10G10R10_UNORM_PACK32;
+		FormatCache[UH_FORMAT_A2R10G10B10] = VK_FORMAT_A2R10G10B10_UNORM_PACK32;
 		FormatCache[UH_FORMAT_RG16F] = VK_FORMAT_R16G16_SFLOAT;
 		FormatCache[UH_FORMAT_R8_UNORM] = VK_FORMAT_R8_UNORM;
 		FormatCache[UH_FORMAT_R16F] = VK_FORMAT_R16_SFLOAT;
 		FormatCache[UH_FORMAT_R16_UNORM] = VK_FORMAT_R16_UNORM;
 		FormatCache[UH_FORMAT_RG16_UNORM] = VK_FORMAT_R16G16_UNORM;
+		FormatCache[UH_FORMAT_R11G11B10] = VK_FORMAT_B10G11R11_UFLOAT_PACK32;
 
 		FormatCache[UH_FORMAT_BC1_UNORM] = VK_FORMAT_BC1_RGB_UNORM_BLOCK;
 		FormatCache[UH_FORMAT_BC1_SRGB] = VK_FORMAT_BC1_RGB_SRGB_BLOCK;
