@@ -20,7 +20,7 @@ Size=680,344
 Collapsed=0
 
 [Window][UHE Settings]
-Pos=1150,98
+Pos=1158,149
 Size=440,708
 Collapsed=0
 
